# mulle-platform

./: .travis.yml  CMakeLists.txt  CMakePackage.cmake  README.md  RELEASENOTES.md  mulle-platform
.github/workflows/: semgrep.yml
.mulle/etc/project/: formula-info.sh  generate-formula.sh  version-info.sh
cola/: README.md  description.md.bud  properties.plist
mulle-project/: formula-info.sh
src/: mulle-platform-environment.sh  mulle-platform-flags.sh  mulle-platform-includepath.sh  mulle-platform-mingw.sh  mulle-platform-mingwbourne.sh  mulle-platform-sdkpath.sh  mulle-platform-search.sh  mulle-platform-searchpath.sh  mulle-platform-translate.sh  mulle-platform-wsl.sh
test/: README.md
test/.mulle/etc/env/: environment-project.sh
test/.mulle/share/env/: environment-post-extension.sh
test/.mulle/share/sourcetree/: config
test/10-environment/: build-tool.args  build-tool.stdout  environment.args  environment.stdout
